Added auto setup remote for git, added playlist support on youtube for mpv

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -41,3 +41,5 @@
     l = log --graph --abbrev-commit --decorate --format=format:'%C(bold yellow)%h%C(reset) - %C(bold green)(%ar)%C(reset)%C(auto)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%n'
 [init]
 	defaultBranch = main
+[push]
+	autoSetupRemote = true
