--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,8 +1,9 @@
 keepaspect-window=no
-volume=60
+volume=90
 pause
 
 [youtube]
 profile-cond=path:find('youtu%.?be')
 ytdl-raw-options-append=proxy=http://127.0.0.1:12334
 ytdl-format=bestvideo[width<=1920]+bestaudio/best
+ytdl-raw-options-append=yes-playlist=
