--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -8,9 +8,14 @@ bind-key C-Space send-prefix
 set -g default-terminal "st"
 set -as terminal-overrides ',st:Tc'
 
-# status bar
+# colors
+set -g mode-style 'reverse'
+set -g message-style 'reverse'
 set -g status-bg '#1C1C1C'
 set -g status-fg '#BCBCBC'
+set-option -g pane-border-style fg='#BCBCBC'
+set-option -g pane-active-border-style fg='#BCBCBC'
+
 set -g status-right "猿も木から落ちる。"
 
 # start windows and panes at 1, not 0
@@ -20,13 +25,12 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # set vi-mode for copy mode
+set-option -g status-keys vi
 set-window-option -g mode-keys vi
-
-# vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
+set -s copy-command 'xclip -selection clipboard'
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
 
 ## nvim integration
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
