Deleted dftr alias and added show aliases for git

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -37,7 +37,8 @@
 	cp = cherry-pick
     st = stash
 
-    dftr = diff-tree --no-commit-id --name-only -r
+    show = show --oneline --pretty=medium
+    shown = show --oneline --pretty=medium --name-only
     l = log --graph --abbrev-commit --decorate --format=format:'%C(bold yellow)%h%C(reset) - %C(bold green)(%ar)%C(reset)%C(auto)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%n'
 [init]
 	defaultBranch = main
