Added picom conf

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,5 +1,11 @@
 backend = "glx";
 vsync = true;
+
+# fixes black border around context menus in firefox for me
+use-dock = true;
+use-ewmh-active-win = true;
+
+# no effects
 use-damage = false;
 shadow = false;
 fading = false;
