--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -35,19 +35,18 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
 ## nvim integration
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?\.?(view|l?n?vim?x?|fzf)(diff)?(-wrapped)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
 
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+bind-key -n C-w if-shell "$is_vim" "send-keys C-w" "switch-client -Ttable1"
+bind-key -Ttable1 'h' select-pane -L
+bind-key -Ttable1 'j' select-pane -D
+bind-key -Ttable1 'k' select-pane -U
+bind-key -Ttable1 'l' select-pane -R
+bind-key -Ttable1 '\' select-pane -l
+bind-key -r -Ttable1 '>' resize-pane -R 5
+bind-key -r -Ttable1 '<' resize-pane -L 5
+bind-key -r -Ttable1 '+' resize-pane -U 5
+bind-key -r -Ttable1 '-' resize-pane -D 5
+bind-key -Ttable1 's' split-window -v
+bind-key -Ttable1 'v' split-window -h
+bind-key -Ttable1 'q' kill-pane
+bind-key -Ttable1 'C-w' send-keys C-w
