--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,43 +3,17 @@
 [credential]
     helper = store
 [alias]
+    diffs = diff --staged
+    mergec = merge --continue
+    rebasei = rebase --interactive
+    rebasec = rebase --continue
     s = status -s
     ss = status
-
-    a = add
-    aa = add .
-    rest = restore
-
-    ci = commit
     amend = commit --amend -a --no-edit
     eamend = commit --amend -a
-
-    br = branch
-    brd = branch -d
-    sw = switch
-    ch = checkout
-
-    ft = fetch --prune
-    mg = merge
-    mgc = merge --continue
-    rb = rebase
-    rbi = rebase --interactive
-    rbc = rebase --continue
-
-    pl = pull --rebase
-    ps = push
-    psf = push --force
-
-    df = diff
-    dfs = diff --staged
-
-    rs = reset
-	cp = cherry-pick
-    st = stash
-
-    show = show --oneline --pretty=medium
+    sh = show --oneline --pretty=medium
     shown = show --oneline --pretty=medium --name-only
-    l = log --graph --abbrev-commit --decorate --format=format:'%C(bold yellow)%h%C(reset) - %C(bold green)(%ar)%C(reset)%C(auto)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%n'
+    lg = log --graph --abbrev-commit --decorate --format=format:'%C(bold yellow)%h%C(reset) - %C(bold green)(%ar)%C(reset)%C(auto)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%n'
 [init]
 	defaultBranch = main
 [push]
