--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -18,6 +18,11 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R   
+
 # set vi-mode for copy mode
 set-option -g status-keys vi
 set-window-option -g mode-keys vi
@@ -25,22 +30,3 @@ set -s copy-command 'xclip -selection clipboard'
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
-
-## nvim integration
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?\.?(view|l?n?vim?x?|fzf)(diff)?(-wrapped)?$'"
-
-bind-key -n C-w if-shell "$is_vim" "send-keys C-w" "switch-client -Ttable1"
-bind-key -Ttable1 'h' select-pane -L
-bind-key -Ttable1 'j' select-pane -D
-bind-key -Ttable1 'k' select-pane -U
-bind-key -Ttable1 'l' select-pane -R
-bind-key -Ttable1 '\' select-pane -l
-bind-key -r -Ttable1 '>' resize-pane -R 5
-bind-key -r -Ttable1 '<' resize-pane -L 5
-bind-key -r -Ttable1 '+' resize-pane -U 5
-bind-key -r -Ttable1 '-' resize-pane -D 5
-bind-key -Ttable1 's' split-window -v
-bind-key -Ttable1 'v' split-window -h
-bind-key -Ttable1 'q' kill-pane
-bind-key -Ttable1 'C-w' send-keys C-w
