--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,3 +1,8 @@
+# leader remap
+unbind C-b
+set -g prefix C-s
+bind C-s send-prefix
+
 # fix colors
 set -g default-terminal "st"
 set -as terminal-overrides ',st:Tc'
