Fixed term colors

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -4,8 +4,8 @@ set -g prefix C-s
 bind C-s send-prefix
 
 # fix colors
-set -g default-terminal "st"
-set -as terminal-overrides ',st:Tc'
+set -g default-terminal "screen-256color"
+set -as terminal-overrides ",*:Tc"
 
 # colors
 set -g mode-style 'reverse'
